POR/RefEdge/src/objects/User_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Used_Classic_Page__c</fullName>
        <label>Last Used Classic Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Used_Lightning_Page__c</fullName>
        <label>Last Used Lightning Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Workspace</fullName>
                </value>
                <value>
                    <fullName>Invitation</fullName>
                </value>
                <value>
                    <fullName>My Filters</fullName>
                </value>
                <value>
                    <fullName>Column Selector</fullName>
                </value>
                <value>
                    <fullName>WorkspaceSLDS</fullName>
                </value>
                <value>
                    <fullName>FieldSelectorRequest</fullName>
                </value>
                <value>
                    <fullName>FilterRequest</fullName>
                </value>
                <value>
                    <fullName>ColumnSelectorProspect</fullName>
                </value>
                <value>
                    <fullName>ListFiltersProspect</fullName>
                </value>
                <value>
                    <fullName>FieldSelectorNomination</fullName>
                </value>
                <value>
                    <fullName>AttMappingFilters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>User Mapping</label>
    <nameField>
        <displayFormat>UM-{000000}</displayFormat>
        <label>User Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>